@@ -458,3 +458,6 @@
 2020-01-21 Fred Gleason <fredg@paravelsystems.com>
 	* Added a '--dump-headers' swich to glassplayer(1).
 	* Implemented the '--dump-headers' swich for the XCast server type.
+2020-01-21 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in glassplayer(1) that caused corruption when reading
+	multi-byte UTF-8 characters from XCast headers.
